# unflatten

./: .gitignore  .last_build_id  .metadata  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  deploy.sh  flutter_bootstrap.js  index.html  main.dart.js  main.dart.mjs  main.dart.wasm  manifest.json  pubspec.yaml  version.json
.github/workflows/: ci.yml
android/app/: build.gradle.kts
assets/: NOTICES
design-v3/: contact-sheet.html  design-tokens.md  desktop.html  mobile.html
docs/: ARCHITECTURE.md  CUSTOM-DOMAIN.md  PRODUCT_SPEC.md  PUSH.md  QUICKSTART.md  RECIPE_FORMAT.md  USER_GUIDE.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/app/: unflatten_app.dart  unflatten_router.dart
lib/core/export/: export.dart  export_result.dart  export_stub.dart  export_web.dart
lib/core/theme/: unflatten_theme.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/crates/unflatten_core/: Cargo.toml
native/crates/unflatten_core/src/: lib.rs
native/crates/unflatten_recipe/: Cargo.toml
native/crates/unflatten_recipe/src/: lib.rs
test/: camera_lab_controller_test.dart  camera_recipe_test.dart  contact_sheet_golden_test.dart  contact_sheet_perf_test.dart  contact_sheet_test.dart  golden_test.dart  mix_lab_test.dart  widget_test.dart
tool/: cargow  flutterw  push.sh  serve-web.sh  verify-build.sh
web/: index.html
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+24 files in other folders)
