[workspace]
members = [
  "crates/unflatten_core",
  "crates/unflatten_recipe",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/unflatten-studio/unflatten"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

